# recc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
src/: common.hpp  handle_holder.hpp  win32_error.hpp
src/client/: main.cpp  remote_call.hpp  signal_context.hpp
src/dll/: capture_base.hpp  capture_dsound.cpp  capture_dsound.hpp  function_detour.hpp  main.cpp  pcm_file.hpp  wave_file.cpp  wave_file.hpp
